--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>this is my first website</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus explicabo illo vitae, repellat nesciunt nulla eos consequatur corporis mollitia minima minus voluptatibus alias? Ipsam ab, cum eos repudiandae aspernatur aperiam.
+    <h1>This is Suad's First Website
+    </h1>
+    <hr>
+    <pre> 
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
+        Quos facilis maiores at deserunt nihil cupiditate inventore corporis quod ullam, 
+        vel libero itaque eaque amet sunt totam dicta eum veritatis ratione?
+    </pre>
+    <a href="secondpage.html">link to next page</a>
+</body>
 </html>
